test/TestPhases/parser/invalid/externWithoutType.blc
@[EntryPoint]
activity E ()()
    extern var foo = true
    await true
end